--- a/_signUp.html
+++ b/_signUp.html
@@ -7,6 +7,7 @@
         <input type="email" class="form-control" name="email" placeholder="Your email" id="signup_user_email" required="" autofocus=""/><br>
         <input type="text" class="form-control" name="username" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>
         <input type="tel" class="form-control" name="usrtel" placeholder="Your phone number" id="signup_phone" required=""/><br>
+        <input type="text" class="form-control" name="usrtel" placeholder="Your Address" id="signup_address" required=""/><br>
         <input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>
         <input type="password" class="form-control" name="password" placeholder="Confirm your password" id="signup_re_pass" required=""/><br>
         <button class="btn btn-lg btn-warning btn-block" id="signup_butt" type="submit">Sign-Up</button><br>
