--- a/_shopping.html
+++ b/_shopping.html
@@ -12,8 +12,7 @@
                 <form id="shoppping_list_form">
                 <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
-                             autofocus/><button id="add-shopping-item" type="button"
-                                                class="btn btn-primary">Add</button></span>
+                             autofocus/></span>
                 </form>
                 <ul id="list">
 
