making driverList page again

--- a/_driverList2.html
+++ b/_driverList2.html
@@ -1,6 +1,6 @@
 
 
-    <div class="container text-center" id="shopping">
+    <div class="container text-center" id="_driverList2_shopping">
         <div class="row" >
             <div class="col-xs-12">
                 <h2 id="listName"></h2>
@@ -8,19 +8,19 @@
             </div>
         </div>
 
-        <div class="container" id = "box">
+        <div class="container box">
             <div class="row" >
                 <div class="col-xs-12">
-                    <ul id="list"></ul>
+                    <ul id="_driverList2_list"></ul>
                 </div>
             </div>
 
             <div class = "row">
                 <div class="col-xs-12">
-                    <div class="todo-footer">
-                        <div id="footerInfo">
-                            <div id="numItems"></div>
-                            <button id="submit_list" type="button" class="btn btn-link">
+                    <div class="driver-footer">
+                        <div id="_driver_footerInfo">
+                            <div id="_driver_numItems"></div>
+                            <button id="_driver_submit_list" type="button" class="btn btn-link">
                                 submit
                             </button>
                         </div>
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div id = "footerBars">
+        <div class ="footerBars">
             <div class="footer2"></div>
             <div class="footer3"></div>
         </div>
