--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,170 +1,146 @@
-
 <div id="accSetting" class="container" style="text-align: center">
     <div class="row">
-        <div class="col-xs-12" style="padding-top: 25px">
-            <ul class="nav nav-tabs .nav-justified">
-                <li class="active"><a href="#home">Account</a></li>
-                <li><a href="#address">Address</a></li>
-                <li><a href="#payment">Payment Info</a></li>
-                <li><a href="#delete">Delete Account</a></li>
-            </ul>
-            <div class="tab-content">
-                <div id="home" class="container">
-                    <h2>Account Information</h2>
-                    <form role="form">
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="accsetting_full_name">Name:</label>
-                                    <input type="text" class="form-control" id="accsetting_full_name">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="accsetting_email">Email:</label>
-                                    <input type="email" class="form-control" id="accsetting_email"
-                                           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="accsetting_phone">Phone Number:</label>
-                                    <input type="text" class="form-control bfh-phone" data-country="US" id="accsetting_phone">
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                    <div class="row">
-                        <button id="submit_accInfo" type="button" class="btn btn-primary">Update</button>
-                    </div>
-                </div>
+        <div class="col-xs-12">
+            <h2>Account Information</h2>
 
-                <div id="address" class="container">
-                    <h2>Account Information</h2>
-                    <form role="form">
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="street">Address:</label>
-                                    <input type="text" class="form-control" id="street">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="city">City:</label>
-                                    <input type="text" class="form-control" id="city">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="state">State:</label>
-                                    <input type="text" class="form-control" id="state">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="zip">ZIP Code:</label>
-                                    <input type="number" class="form-control" id="zip">
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+            <div id="accProfile">
+                <form role="form">
                     <div class="row">
-                        <button id="submit_address" type="button" class="btn btn-primary">Update</button>
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_full_name">Name:</label>
+                                <input type="text" class="form-control" id="accsetting_full_name">
+                            </div>
+                        </div>
                     </div>
-                </div>
-
-                <div id="payment" class="container">
-                    <h2>Account Information</h2>
-                    <form role="form">
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="cardName">Card Holder's Name:</label>
-                                    <input type="text" class="form-control" id="cardName">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="card">Card Number:</label>
-                                    <input type="number" class="form-control" id="card">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-inline col-xs-8 col-xs-offset-2">
-                                <div class="row">
-                                    <label for="month">Card Expiration Date:</label>
-                                </div>
-                                <div class="form-group" style="margin-bottom: 13px; margin-top: .30;">
-                                    <select class="form-control" id="month">
-                                        <option>January</option>
-                                        <option>February</option>
-                                        <option>March</option>
-                                        <option>April</option>
-                                        <option>May</option>
-                                        <option>June</option>
-                                        <option>July</option>
-                                        <option>August</option>
-                                        <option>September</option>
-                                        <option>October</option>
-                                        <option>November</option>
-                                        <option>December</option>
-                                    </select>
-                                </div>
-                                <div class="form-group" style="margin-bottom: 13px; margin-top: .30%;">
-                                    <select class="form-control" id="year">
-                                        <option>2015</option>
-                                        <option>2016</option>
-                                        <option>2017</option>
-                                        <option>2018</option>
-                                        <option>2019</option>
-                                        <option>2020</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="cvv">Card CVV:</label>
-                                    <input type="text" class="form-control" id="cvv"
-                                           pattern="(?=.*[0-9a-zA-Z]).{3,}" title="Must contain 3 digits">
-                                </div>
-                            </div>
-                        </div>
-                    </form>
                     <div class="row">
-                        <button id="submit_card" type="button" class="btn btn-primary">Update</button>
-                    </div>
-                </div>
-
-                <div id="delete" class="container">
-                    <h2>Account Information</h2>
-                    <form role="form">
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <label>Are you sure you want to delete your account?</label>
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_email">Email:</label>
+                                <input type="email" class="form-control" id="accsetting_email"
+                                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
                             </div>
                         </div>
-                        <button id="submit_delete" class="btn btn-primary">Delete</button>
-                    </form>
-                </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_phone">Phone Number:</label>
+                                <input type="text" class="form-control bfh-phone" data-country="US"
+                                       id="accsetting_phone">
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
+
+            <div id="address" class="container">
+                <h2>Address</h2>
+                <form role="form">
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_street">Street:</label>
+                                <input type="text" class="form-control" id="accsetting_street">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_city">City:</label>
+                                <input type="text" class="form-control" id="accsetting_city">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_state">State:</label>
+                                <input type="text" class="form-control" id="accsetting_state">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2">
+                            <div class="form-group">
+                                <label for="accsetting_zip">ZIP Code:</label>
+                                <input type="number" class="form-control" id="accsetting_zip">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                    <button id="submit_info" type="button" class="btn btn-primary" style="margin-bottom: 10%">Update</button>
+                    </div>
+                </form>
+            </div>
+
+            <!--<div id="payment" class="container">-->
+                <!--<h2>Payment</h2>-->
+                <!--<form role="form">-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-8 col-xs-offset-2">-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="cardName">Card Holder's Name:</label>-->
+                                <!--<input type="text" class="form-control" id="cardName">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-8 col-xs-offset-2">-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="card">Card Number:</label>-->
+                                <!--<input type="number" class="form-control" id="card">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<div class="form-inline col-xs-8 col-xs-offset-2">-->
+                            <!--<div class="row">-->
+                                <!--<label for="month">Card Expiration Date:</label>-->
+                            <!--</div>-->
+                            <!--<div class="form-group" style="margin-bottom: 13px;">-->
+                                <!--<select class="form-control" id="month">-->
+                                    <!--<option>January</option>-->
+                                    <!--<option>February</option>-->
+                                    <!--<option>March</option>-->
+                                    <!--<option>April</option>-->
+                                    <!--<option>May</option>-->
+                                    <!--<option>June</option>-->
+                                    <!--<option>July</option>-->
+                                    <!--<option>August</option>-->
+                                    <!--<option>September</option>-->
+                                    <!--<option>October</option>-->
+                                    <!--<option>November</option>-->
+                                    <!--<option>December</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                            <!--<div class="form-group" style="margin-bottom: 13px; margin-top: .30%;">-->
+                                <!--<select class="form-control" id="year">-->
+                                    <!--<option>2015</option>-->
+                                    <!--<option>2016</option>-->
+                                    <!--<option>2017</option>-->
+                                    <!--<option>2018</option>-->
+                                    <!--<option>2019</option>-->
+                                    <!--<option>2020</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-xs-8 col-xs-offset-2">-->
+                            <!--<div class="form-group">-->
+                                <!--<label for="cvv">Card CVV:</label>-->
+                                <!--<input type="text" class="form-control" id="cvv"-->
+                                       <!--pattern="(?=.*[0-9a-zA-Z]).{3,}" title="Must contain 3 digits">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</form>-->
+            <!--</div>div-->
         </div>
     </div>
+</div>
 </div>
 <script src="/js/_accSetting.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-formhelpers/2.3.0/js/bootstrap-formhelpers.min.js"></script>
