--- a/payment.html
+++ b/payment.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
-<body>
 <form class="hidden" id="payment-form-1" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
     <input type="hidden" name="cmd" value="_xclick">
     <input type="hidden" name="business" value="YSDLMAVKEK5R8">
@@ -196,7 +188,7 @@
         $('.complete-payment').val('http://ec2-52-10-41-135.us-west-2.compute.amazonaws.com/complete-payment?user=' + loader.user.id + '&ticket=' + loader.ticket.id);
         $('.cancel-payment').val('http://ec2-52-10-41-135.us-west-2.compute.amazonaws.com/cancel-payment?user=' + loader.user.id + '&ticket=' + loader.ticket.id);
 
-        var price = loader.ticket.price;
+        var price = 5;
 
         if (price >= 5 && price <= 14) {
             document.getElementById('payment-select-1').selectedIndex = price - 5;
@@ -212,5 +204,3 @@
         }
     }
 </script>
-</body>
-</html>
