--- a/_shopping.html
+++ b/_shopping.html
@@ -1,4 +1,4 @@
-<div class="container text-center" id="_shopping">
+<div class="container text-center" id="shopping">
 
     <div class="row">
         <div class="col-xs-12">
@@ -6,15 +6,15 @@
         </div>
     </div>
 
-    <div class="container" class ="box">
+    <div class="container box">
         <div class="row">
             <div class="col-xs-12">
-                <form id="shopping_shoppping_list_form">
-                <span><input id="shopping_shoppingCheckListItem" class="input" type="text" name="checkListItem"
+                <form id="shopping_list_form">
+                <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
                              autofocus/></span>
                 </form>
-                <ul id="shopping_list">
+                <ul id="list">
 
                 </ul>
             </div>
@@ -23,9 +23,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="todo-footer">
-                    <div class="footerInfo">
-                        <div id="shopping_numItems"></div>
-                        <button id="shopping_submit_list" type="button" class="btn btn-link">
+                    <div id="footerInfo">
+                        <div id="numItems"></div>
+                        <button id="submit_list" type="button" class="btn btn-link">
                             Submit
                         </button>
                     </div>
