--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             if (loader.currentPageObject.loadData != null) {
                 $.post("/loadData" + loader.currentPage, {
                     name: loader.currentPage,
-                    version: loader.currentPageObject.version,
+                    version: loader.currentPageObject.version
                 }, function (resp) {
                     if (resp != "none") {
                         loader.currentPageObject.data = resp.data;
@@ -326,9 +326,17 @@
                     page: loader.currentPage
                 }
             }, function (resp) {
-                if (resp.i)
-
-                //Change page if page is newer
+                //Driver change, trigger driver change
+                if (resp.isDriver != loader.isDriver) {
+                    if (resp.isDriver) {
+                        loader.switchToDriver();
+                    }
+                    else {
+                        loader.switchToShopper();
+                    }
+                }
+                else {
+                    //Change page if page is newer
                     if (resp.pageCount > loader.pageCount) {
                         loader.previousPage = resp.previousPage;
                         loader.currentPage = resp.currentPage;
@@ -337,6 +345,7 @@
                         if (loader.currentPageObject.loadData != null) {
                             loader.currentPageObject.loadData(resp.data);
                         }
+                        loader.goToPage(loader.currentPage);
                     }
                     //Update page if on same page and new version
                     else if (resp.pageCount == loader.pageCount) {
@@ -349,7 +358,7 @@
                     else {
                         //do nothing since this local copy is newer
                     }
-
+                }
             });
         },
 
@@ -362,6 +371,9 @@
             //TODO: delete cookie and refresh page
         },
         switchToDriver: function () {
+            //Call and go to new page
+            //UI changes, etc
+
 
         },
         switchToShopper: function () {
@@ -413,30 +425,30 @@
         });
     }
 
-//    $(document).ready(function () {
-//        pageInit();
-//        var i;
-//        var whichid;
-//        var glyph;
-//        var name;
-//        for (var j = 0; j < allSections.length; j++) {
-//            var sectionName = allSections[j];
-//            var section = allPages[sectionName];
-//            for (i = 0; i < section.length; i++) {
-//                whichid = section[i];
-//                for (var k = 0; k < all.length; k++) {
-//                    if (whichid == all[k]) {
-//                        glyph = allGlyphs[k];
-//                        name = pageNames[k];
-//                        break;
-//                    }
-//                }
-//                loadPage(whichid, '#' + sectionName, i, j);
-//                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-//                $("#Butt").append("<div " + clickVal + " > <span class= '" + glyph + "'></span> " + name + "   </div>");
-//            }
-//        }
-//    });
+    //    $(document).ready(function () {
+    //        pageInit();
+    //        var i;
+    //        var whichid;
+    //        var glyph;
+    //        var name;
+    //        for (var j = 0; j < allSections.length; j++) {
+    //            var sectionName = allSections[j];
+    //            var section = allPages[sectionName];
+    //            for (i = 0; i < section.length; i++) {
+    //                whichid = section[i];
+    //                for (var k = 0; k < all.length; k++) {
+    //                    if (whichid == all[k]) {
+    //                        glyph = allGlyphs[k];
+    //                        name = pageNames[k];
+    //                        break;
+    //                    }
+    //                }
+    //                loadPage(whichid, '#' + sectionName, i, j);
+    //                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
+    //                $("#Butt").append("<div " + clickVal + " > <span class= '" + glyph + "'></span> " + name + "   </div>");
+    //            }
+    //        }
+    //    });
 
 
     jQuery(document).ready(function ($) {
