--- a/index.html
+++ b/index.html
@@ -108,24 +108,13 @@
 
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
 
-    var all = ["_accSetting", "_contact", "_history", "_passwordRecovery", "_homePage", "_shopping", "_checkout", "_login",
-        "_rating", "_passwordReset", "_signUp", "_tickets", "_driverList2", '_congrats', "_yourDeliveries"];
-
-    var allGlyphs = ["glyphicon glyphicon-cog", "", "", "glyphicon glyphicon-wrench", "glyphicon glyphicon-home",
-        "", "glyphicon glyphicon-check", "glyphicon glyphicon-log-in", "glyphicon glyphicon-signal",
-        "glyphicon glyphicon-repeat",
-        "glyphicon glyphicon-plus-sign", "", "", "",""];
-
-    var pageNames = ["Setting", "Contact", "History", "Password Recovery", "Home", "Shopping", "Checkout", "Login",
-        "Rating", "Password Reset", "Sign Up", "Tickets", "Driver List", 'Congrats', "Your Deliveries"];
-
     var allPages = {
         abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" /*,"_passwordReset" ",_signUp", "_login"*/],
         createTicket: ["_homePage", "_shopping", "_checkout", "_login"/*, "_submitted"*/],
         /*acceptTicket: ['_acceptTicket', '_paid'],*/
         /*acceptTicket: ['_cancelTicket','_cancelled'],*/
         confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset", "_signUp"],
-        driverFlow: ['_tickets', '_driverList2', /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
+        driverFlow: ['_tickets', '_driverList2', "" /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
     };
 
     loadPage("_driverTickets", '#driverTickets');
@@ -248,17 +237,13 @@
         },
 
         //Saves current active ticket (if any), then fetches new one and loads page data corresponding to ticket status in back end store
-        getTicket: function (ticketId, state, store) {
-            if (arguments.length < 3) {
-                store = null;
-            }
+        getTicket: function (ticketId) {
             if (state != "accepted" || loader.isDriver) {
                 $.post("/getTicket", {
 
                     id: ticketId,
-                    store: store
 
-                }, function () {
+                }, function (state) {
                     if (loader.isDriver) {
                         switch (state) {
                             case "accepted" :
@@ -267,7 +252,8 @@
                             case "shopped":
                                 goToPage("_completeTicket");
                                 break;
-                            case "" :
+                            case "delivered" :
+                                goTopage()
                         }
                     }
                     else {
@@ -326,6 +312,7 @@
                     page: loader.currentPage
                 }
             }, function (resp) {
+
                 //Driver change, trigger driver change
                 if (resp.isDriver != loader.isDriver) {
                     if (resp.isDriver) {
@@ -372,8 +359,6 @@
         switchToDriver: function () {
             //Call and go to new page
             //UI changes, etc
-
-
         },
         switchToShopper: function () {
 
@@ -424,30 +409,30 @@
         });
     }
 
-    //    $(document).ready(function () {
-    //        pageInit();
-    //        var i;
-    //        var whichid;
-    //        var glyph;
-    //        var name;
-    //        for (var j = 0; j < allSections.length; j++) {
-    //            var sectionName = allSections[j];
-    //            var section = allPages[sectionName];
-    //            for (i = 0; i < section.length; i++) {
-    //                whichid = section[i];
-    //                for (var k = 0; k < all.length; k++) {
-    //                    if (whichid == all[k]) {
-    //                        glyph = allGlyphs[k];
-    //                        name = pageNames[k];
-    //                        break;
-    //                    }
-    //                }
-    //                loadPage(whichid, '#' + sectionName, i, j);
-    //                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-    //                $("#Butt").append("<div " + clickVal + " > <span class= '" + glyph + "'></span> " + name + "   </div>");
-    //            }
-    //        }
-    //    });
+    $(document).ready(function () {
+        pageInit();
+        var i;
+        var whichid;
+        var glyph;
+        var name;
+        for (var j = 0; j < allSections.length; j++) {
+            var sectionName = allSections[j];
+            var section = allPages[sectionName];
+            for (i = 0; i < section.length; i++) {
+                whichid = section[i];
+                for (var k = 0; k < all.length; k++) {
+                    if (whichid == all[k]) {
+                        glyph = allGlyphs[k];
+                        name = pageNames[k];
+                        break;
+                    }
+                }
+                loadPage(whichid, '#' + sectionName, i, j);
+                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
+                $("#Butt").append("<div " + clickVal + " > <span class= '" + glyph + "'></span> " + name + "   </div>");
+            }
+        }
+    });
 
 
     jQuery(document).ready(function ($) {
