--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -7,9 +7,9 @@
 
                     <div class="row">
                         <div class="col-xs-12">
-                            <h3>Pending Tickets</h3>
+                            <h3>Accepted Tickets</h3>
                             <div class="container" id="box">
-                                <ul id="pending_tickets" class=text-center"></ul>
+                                <ul id="yourDeliveries_accepted_tickets" class=text-center"></ul>
                             </div>
                         </div>
                     </div>
@@ -28,7 +28,26 @@
                         <div class="col-xs-12">
                             <h3>Completed Tickets</h3>
                             <div class="container" id="box">
-                                <ul id="completed_tickets" class=text-center"></ul>
+                                <ul id="yourDeliveries_shopped_tickets" class=text-center"></ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="todo-footer">
+                            <div id="footer1">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="footerBars">
+                        <div class="footer2"></div>
+                        <div class="footer3"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h3>Delivered Tickets</h3>
+                            <div class="container" id="box">
+                                <ul id="yourDeliveries_delivered_tickets" class=text-center"></ul>
                             </div>
                         </div>
                     </div>
