--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
 
     var allPages = {
-        abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" /*,"_passwordReset" ",_signUp", "_login"*/],
-        createTicket: ["_homePage", "_shopping", "_checkout", "_login"/*, "_submitted"*/],
+        abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" ,"_passwordReset" ",_signUp", "_login"],
+        createTicket: ["_homePage", "_shopping", "_checkout"/*, "_submitted"*/],
         /*acceptTicket: ['_acceptTicket', '_paid'],*/
         /*acceptTicket: ['_cancelTicket','_cancelled'],*/
-        confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset", "_signUp"],
+        confirmTicket: [/*'_confirmTicket',*/ "_rating" /*,'_ticketClosed'*/],
         driverFlow: ['_tickets', '_driverList2', /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
     };
 
