--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
 
     var allPages = {
-        abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" ,"_passwordReset" ",_signUp", "_login"],
+        abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" ,"_passwordReset", "_signUp", "_login"],
         createTicket: ["_homePage", "_shopping", "_checkout"/*, "_submitted"*/],
         /*acceptTicket: ['_acceptTicket', '_paid'],*/
         /*acceptTicket: ['_cancelTicket','_cancelled'],*/
