--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 </div>
 
 <div id="page-content" style="overflow-x: visible">
-    <!--<div id="abovePages" class=""></div>-->
-    <!--<div id="createTicket" class=""></div>-->
-    <!--&lt;!&ndash;<div id="acceptTicket" class=""></div>&ndash;&gt;-->
-    <!--<div id="confirmTicket" class=""></div>-->
-    <!--<div id="driverFlow" class=""></div>-->
+    <div id="abovePages" class=""></div>
+    <div id="createTicket" class=""></div>
+    <!--<div id="acceptTicket" class=""></div>-->
+    <div id="confirmTicket" class=""></div>
+    <div id="driverFlow" class=""></div>
 </div>
 
 <div id="menu-drawer" class="cd-panel from-right" style="z-index: 3000">
@@ -86,7 +86,6 @@
             }
         });
     }
-
 
     var allSections = ['abovePages', 'createTicket',  'confirmTicket', 'driverFlow'];
 
