--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
             });
 
         },
+        getTicketQueue : function(){
+            //TODO
+        },
+        getUserTicket :function(){
+
+        },
+        getDriverTicket : function(){
+
+        },
+
+
         sendData: function () { //Gets data from page and sends to server for update. Server will send back version num
             if (loader.currentPageObject.getData != null) {
                 loader.currentPageObject.data = loader.currentPageObject.getData();
