--- a/_tickets.html
+++ b/_tickets.html
@@ -1,45 +1,44 @@
 <div id="tickets">
-    <div class="row">
-        <div class="col-xs-12">
-            <h2 class="text-center">Avaliable Tickets</h2>
-            <div class="container">
-                <div class="text-center">
-                    <div class="row">
-                        <ul id="buttons" class="col-xs-12">
-                            <li class="col-xs-3">
-                                <h4><div data-name="ralphs" class="store">Ralph's</div></h4>
-                            </li>
-                            <li class="col-xs-3">
-                                <h4><div data-name="tjs" class="store">TJ's</div></h4>
-                            </li>
-                            <li class="col-xs-3">
-                                <h4><div data-name="wholeFoods" class="store">WholeFoods</div></h4>
-                            </li>
-                            <li class="col-xs-3">
-                                <h4><div data-name="vons" class="store">Vons</div></h4>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="text-center">Avaliable Tickets</h2>
             </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="container" id="box">
-                        <ul id="tickets_content" class=text-center"></ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="todo-footer">
-                    <div id="footerInfo">
-                    </div>
-                </div>
-            </div>
-            <div id="footerBars">
-                <div class="footer2"></div>
-                <div class="footer3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <ul id="buttons" class="col-xs-12">
+                    <li class="col-xs-3">
+                        <h4><div data-name="ralphs" class="store">Ralph's</div></h4>
+                    </li>
+                    <li class="col-xs-3">
+                        <h4><div data-name="tjs" class="store">TJ's</div></h4>
+                    </li>
+                    <li class="col-xs-3">
+                        <h4><div data-name="wholeFoods" class="store">WholeFoods</div></h4>
+                    </li>
+                    <li class="col-xs-3">
+                        <h4><div data-name="vons" class="store">Vons</div></h4>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
+
+    <div class="box">
+        <div class="row">
+            <div class="col-xs-12">
+                <ul id="tickets_content" class=text-center"></ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="footerBars">
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+    </div>
+
 </div>
 <script type="text/javascript" src="/js/_tickets.js"></script>
